--- a/src/DatabaseMigraine.Unit.Tests/DatabaseMigraine.Unit.Tests.csproj
+++ b/src/DatabaseMigraine.Unit.Tests/DatabaseMigraine.Unit.Tests.csproj
@@ -5,14 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{446713D8-8A0D-4419-A5C8-BD15D10A50F9}</ProjectGuid>
+    <ProjectGuid>{06B7D0D6-0A6A-48AB-B667-BD0C94C6337F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DatabaseMigraine.Tests</RootNamespace>
-    <AssemblyName>DatabaseMigraine.Tests</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <RootNamespace>DatabaseMigraine.Unit.Tests</RootNamespace>
+    <AssemblyName>DatabaseMigraine.Unit.Tests</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,47 +29,42 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.SqlServer.ConnectionInfo">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\Microsoft.SqlServer.ConnectionInfo.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.SqlServer.Management.Sdk.Sfc">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\Microsoft.SqlServer.Management.Sdk.Sfc.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.SqlServer.Smo">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\Microsoft.SqlServer.Smo.dll</HintPath>
-    </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.SqlServer.ConnectionInfo, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.SqlServer.Management.Sdk.Sfc, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.SqlServer.Smo, Version=10.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DatabaseComparisonTests.cs" />
-    <Compile Include="DatabaseCreationTests.cs" />
-    <Compile Include="DisposableDbTestBase.cs" />
-    <Compile Include="MigrationCop.cs" />
+    <Compile Include="ConfigFileSaboteurTests.cs" />
+    <Compile Include="DatabaseCreationWithSuffixTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Retry.cs" />
-    <Compile Include="TableCop.cs" />
+    <Compile Include="RetryTests.cs" />
+    <Compile Include="ScriptComparerTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DatabaseMigraine.Tests\DatabaseMigraine.Tests.csproj">
+      <Project>{446713D8-8A0D-4419-A5C8-BD15D10A50F9}</Project>
+      <Name>DatabaseMigraine.Tests</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DatabaseMigraine\DatabaseMigraine.csproj">
       <Project>{071DC959-B560-472D-802E-510C66F6A267}</Project>
       <Name>DatabaseMigraine</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Formatter\Formatter.csproj">
-      <Project>{FD65ECBC-3E52-471E-B5E5-B90BBB59EB98}</Project>
-      <Name>Formatter</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="db\foo\00_Database\Database.sql" />
+    <Content Include="db\foo\01_Tables\bar.sql" />
+    <Content Include="db\foo\01_Tables\baz.sql" />
+    <Content Include="db\foo\01_Tables\foo.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
