--- a/src/DatabaseMigraine.Tests/DatabaseMigraine.Tests.csproj
+++ b/src/DatabaseMigraine.Tests/DatabaseMigraine.Tests.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="DatabaseComparisonTests.cs" />
     <Compile Include="DatabaseCreationTests.cs" />
+    <Compile Include="DisposableDbSetUp.cs" />
     <Compile Include="DisposableDbTestBase.cs" />
     <Compile Include="MigrationCop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
