What is a manager of managers? A ChiefExecutive.
Knowing what of the managers hold elements which are exposed (as in,
you can use them externally as a consumer of the Database) is going
to be needed very soon (by the SpiderTests).

--- a/src/DatabaseMigraine/DatabaseMigraine.csproj
+++ b/src/DatabaseMigraine/DatabaseMigraine.csproj
@@ -77,6 +77,7 @@
     <Compile Include="DbScriptFolderManager.cs" />
     <Compile Include="DisposableDbManager.cs" />
     <Compile Include="Folders.cs" />
+    <Compile Include="Managers\ChiefExecutive.cs" />
     <Compile Include="Managers\ForeignKeyManager.cs" />
     <Compile Include="Managers\FunctionManager.cs" />
     <Compile Include="Managers\MigrationManager.cs" />
