--- a/src/DatabaseMigraine.Unit.Tests/DatabaseMigraine.Unit.Tests.csproj
+++ b/src/DatabaseMigraine.Unit.Tests/DatabaseMigraine.Unit.Tests.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="ConfigFileSaboteurTests.cs" />
     <Compile Include="DatabaseCreationWithSuffixTests.cs" />
+    <Compile Include="ExternalElements.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetryTests.cs" />
     <Compile Include="ScriptComparerTests.cs" />
