--- a/src/DatabaseBisect.Tests/DatabaseBisect.Tests.csproj
+++ b/src/DatabaseBisect.Tests/DatabaseBisect.Tests.csproj
@@ -66,6 +66,7 @@
     <Content Include="db\fooForFk\07_StaticData\LnkTesting.sql" />
     <Content Include="db\foo\01_Tables\baz.sql" />
     <Compile Include="Acceptance\ClearAndTestAndChooseWithFKs.cs" />
+    <Compile Include="Acceptance\ClearAndTestSequence.cs" />
     <Compile Include="Unit\TransformScriptUnitTests.cs" />
     <Compile Include="Acceptance\DbHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
