Bisect: new AAT that may replace a too abstract unit test...
It doesn't pass yet, I'm working on it...

--- a/src/DatabaseBisect.Tests/DatabaseBisect.Tests.csproj
+++ b/src/DatabaseBisect.Tests/DatabaseBisect.Tests.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Acceptance\BisectDatabaseBasic.cs" />
     <Compile Include="Acceptance\ClearAndTestBasic.cs" />
     <Compile Include="Acceptance\ChooseTableTests.cs" />
     <Content Include="db\fooForFk\00_Database\Database.sql" />
