Workaround to make Resharper-Test-debugger work again
This is a workaround for this issue:
http://stackoverflow.com/questions/11456314/resharper-internal-error-when-debugging-in-64bits-and-using-smo-apis

Also tracked in JetBrains issue tracker:
http://youtrack.jetbrains.com/issue/RSRP-326369

--- a/src/DatabaseBisect.Tests/DatabaseBisect.Tests.csproj
+++ b/src/DatabaseBisect.Tests/DatabaseBisect.Tests.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DatabaseBisect.Tests</RootNamespace>
     <AssemblyName>DatabaseBisect.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
