--- a/src/DatabaseBisect.Tests/DatabaseBisect.Tests.csproj
+++ b/src/DatabaseBisect.Tests/DatabaseBisect.Tests.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Acceptance\ClearAndTestAndChooseWithFKs.cs" />
     <Compile Include="Acceptance\ClearAndTestSequence.cs" />
     <Compile Include="Acceptance\ClearAndTestWithOperationThatInsertsData.cs" />
-    <Compile Include="Unit\TestLaunch\NUnitFind.cs" />
+    <Compile Include="Unit\TestLaunch\ProgramFilesFinder.cs" />
     <Compile Include="Unit\TransformScriptUnitTests.cs" />
     <Compile Include="Acceptance\DbHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
