--- a/src/DatabaseBisect/DatabaseBisect.csproj
+++ b/src/DatabaseBisect/DatabaseBisect.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IBisector.cs" />
     <Compile Include="IDatabase.cs" />
     <Compile Include="IDirectory.cs" />
+    <Compile Include="IProgramFilesFinder.cs" />
     <Compile Include="NUnitFinder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProgramFilesFinder.cs" />
