--- a/src/DatabaseScripter.Tests/DatabaseScripter.Tests.csproj
+++ b/src/DatabaseScripter.Tests/DatabaseScripter.Tests.csproj
@@ -30,7 +30,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework">
-      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\..\packages\NUnit.2.6.1\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
@@ -43,6 +43,9 @@
       <Project>{5FAEE6FC-A130-44C0-95F3-774A1E60B358}</Project>
       <Name>DatabaseScripter</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
