Reference Nunut 2.6.1 via Nuget

--- a/src/DatabaseMigraine.Unit.Tests/DatabaseMigraine.Unit.Tests.csproj
+++ b/src/DatabaseMigraine.Unit.Tests/DatabaseMigraine.Unit.Tests.csproj
@@ -44,8 +44,7 @@
       <HintPath>..\..\lib\Microsoft.SqlServer.Smo.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\..\packages\NUnit.2.6.1\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -78,6 +77,9 @@
     <Content Include="db\foo\01_Tables\bar.sql" />
     <Content Include="db\foo\01_Tables\baz.sql" />
     <Content Include="db\foo\01_Tables\foo.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
