Mozilla Universal Charset Detector nuget dep
- Delete ude dll and pdb
- Add nuget package config for formatter

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,4 +5,5 @@
   <repository path="..\src\DatabaseMigraine.Unit.Tests\packages.config" />
   <repository path="..\src\DatabaseScripter.Tests\packages.config" />
   <repository path="..\src\Formatter.Unit.Tests\packages.config" />
+  <repository path="..\src\Formatter\packages.config" />
 </repositories>
