--- a/src/DatabaseMigraine.Tests/DatabaseMigraine.Tests.csproj
+++ b/src/DatabaseMigraine.Tests/DatabaseMigraine.Tests.csproj
@@ -46,7 +46,7 @@
       <HintPath>..\..\lib\Microsoft.SqlServer.Smo.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
-      <HintPath>..\..\packages\NUnit.2.6.1\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -57,7 +57,7 @@
     <Compile Include="DatabaseComparisonTests.cs" />
     <Compile Include="DatabaseCreationTests.cs" />
     <Compile Include="DisposableDbSetUp.cs" />
-    <Compile Include="DisposableDbTestBase.cs" />
+    <Compile Include="DisposableDbSetupWithFixture.cs" />
     <Compile Include="MigrationCop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Retry.cs" />
@@ -72,9 +72,6 @@
       <Project>{FD65ECBC-3E52-471E-B5E5-B90BBB59EB98}</Project>
       <Name>Formatter</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
