--- a/src/DatabaseScripter.Tests/DatabaseScripter.Tests.csproj
+++ b/src/DatabaseScripter.Tests/DatabaseScripter.Tests.csproj
@@ -9,6 +9,8 @@
     <OutputType>Library</OutputType>
     <RootNamespace>DatabaseScripter.Tests</RootNamespace>
     <AssemblyName>DatabaseScripter.Tests</AssemblyName>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -48,4 +50,5 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
 </Project>
