Delete dead code (Formatter project)
This code ended up not being used/needed.
I have moved it to my own repository in https://github.com/knocte/SqlFormatter
for posterity.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,7 +3,6 @@
   <repository path="..\src\DatabaseBisect.Tests\packages.config" />
   <repository path="..\src\DatabaseMigraine.Tests\packages.config" />
   <repository path="..\src\DatabaseMigraine.Unit.Tests\packages.config" />
+  <repository path="..\src\DatabaseMigraine\packages.config" />
   <repository path="..\src\DatabaseScripter.Tests\packages.config" />
-  <repository path="..\src\Formatter.Unit.Tests\packages.config" />
-  <repository path="..\src\Formatter\packages.config" />
 </repositories>
