--- a/src/DatabaseMigraine.Unit.Tests/DatabaseMigraine.Unit.Tests.csproj
+++ b/src/DatabaseMigraine.Unit.Tests/DatabaseMigraine.Unit.Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ConfigFileSaboteurTests.cs" />
     <Compile Include="DatabaseCreationWithSuffixTests.cs" />
     <Compile Include="ExternalElements.cs" />
+    <Compile Include="FormatterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetryTests.cs" />
     <Compile Include="ScriptComparerTests.cs" />
@@ -81,7 +82,9 @@
     <Content Include="db\foo\01_Tables\foo.sql" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
