SQL Server dlls are transitive dependencies
- We forgot to add these dlls to the packages, they are loaded at
  runtime and leaving them out causes null reference exceptions.
  Unforutnately this wasn't caught as the package appears valid when
  created locally, but fails in a clean environment without a local
  clone of this project.

--- a/DatabaseMigraine.Tests.nuspec
+++ b/DatabaseMigraine.Tests.nuspec
@@ -19,5 +19,8 @@
   </metadata>
   <files>
     <file src="src\DatabaseMigraine.Tests\bin\release\DatabaseMigraine.Tests.dll" target="lib\net35" />   
+    <file src="lib\Microsoft.SqlServer.Smo.dll" target="lib\net35" />
+    <file src="lib\Microsoft.SqlServer.Management.Sdk.Sfc.dll" target="lib\net35" />
+    <file src="lib\Microsoft.SqlServer.ConnectionInfo.dll" target="lib\net35" />
   </files>
 </package>
