nuget: be picky about the spelling of my name

--- a/DatabaseMigraine.nuspec
+++ b/DatabaseMigraine.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>DatabaseMigraine</id>
     <version>1.0.0</version>
-    <authors>Andres Aragoneses</authors>
+    <authors>Andrés G. Aragoneses</authors>
     <owners>7Digital</owners>
     <licenseUrl>http://opensource.org/licenses/rpl1.5.txt</licenseUrl>
     <projectUrl>http://github.com/7digital/DatabaseMigraine</projectUrl>
