nuget: owner is not only 7d
Because I worked on it sometimes in my spare time ;)

--- a/DatabaseMigraine.Tools.nuspec
+++ b/DatabaseMigraine.Tools.nuspec
@@ -4,7 +4,7 @@
     <id>DatabaseMigraine.Tools</id>
     <version>1.0.0</version>
     <authors>Andrés G. Aragoneses</authors>
-    <owners>7Digital</owners>
+    <owners>7Digital, Andrés G. Aragoneses</owners>
     <licenseUrl>http://opensource.org/licenses/rpl1.5.txt</licenseUrl>
     <projectUrl>http://github.com/7digital/DatabaseMigraine</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
