nuget: Adding Hibri to authors
Also adding "..." because there are more contributors.

--- a/DatabaseMigraine.Tools.nuspec
+++ b/DatabaseMigraine.Tools.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>DatabaseMigraine.Tools</id>
     <version>1.0.0</version>
-    <authors>Andrés G. Aragoneses</authors>
+    <authors>Andrés G. Aragoneses, Hibri Marzook, ...</authors>
     <owners>7Digital, Andrés G. Aragoneses</owners>
     <licenseUrl>http://opensource.org/licenses/rpl1.5.txt</licenseUrl>
     <projectUrl>http://github.com/7digital/DatabaseMigraine</projectUrl>
