Allowed passing of ConnectionStrings to DisposableDBManager instead of Server type.

--- a/src/DatabaseMigraine.Unit.Tests/DatabaseMigraine.Unit.Tests.csproj
+++ b/src/DatabaseMigraine.Unit.Tests/DatabaseMigraine.Unit.Tests.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="ConfigFileSaboteurTests.cs" />
     <Compile Include="DatabaseCreationWithSuffixTests.cs" />
+    <Compile Include="DisposableDbManagerTests.cs" />
     <Compile Include="ExternalElements.cs" />
     <Compile Include="FormatterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
