--- a/src/DatabaseCreator/App.config
+++ b/src/DatabaseCreator/App.config
@@ -6,5 +6,7 @@
     <add key="DisposableDbConnString" value="Trusted_Connection=true;Min Pool Size=5;Max Pool Size=200;" />
     <add key="DbCreationPath" value="C:\SQLdata" />
 
+    <add key="IgnoreViewPerformanceCheck+pcpx2" value="true" /><!-- This is pretty bad, pcpx2 has views which depend on other views, we should fix this... -->
+    
   </appSettings>
 </configuration>
