--- a/src/DatabaseCreator/App.config
+++ b/src/DatabaseCreator/App.config
@@ -4,7 +4,7 @@
 
     <add key="DisposableDbHostname" value="(local)" />
     <add key="DisposableDbConnString" value="Trusted_Connection=true;Min Pool Size=5;Max Pool Size=200;" />
-    <add key="DbCreationPath" value="C:\SQLdata" />
+    <add key="DbCreationPath" value="E:\SQLdata" />
     
   </appSettings>
 </configuration>
