--- a/src/DatabaseCreator/App.config
+++ b/src/DatabaseCreator/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
 
-    <add key="DisposableDbHostname" value="(local)" />
+    <add key="DisposableDbHostname" value="devdb.sql.dev.svc.7d,59281" />
     <add key="DisposableDbConnString" value="Trusted_Connection=true;Min Pool Size=5;Max Pool Size=200;" />
     <add key="DbCreationPath" value="E:\SQLdata" />
     
